# vaccine_cancer_design

./: .gitignore  README.md  cds_cache.json  download_data.py  main.py  process_data.py  pyproject.toml  uniprot_cache.json
.jules/: bolt.md
data_processing/: data_analysis.py  data_validation.py  helper_functions.py  mutated_genes.py  tests.py
docs/: validation_report.txt
model/: training.py
vaccine_design/: pipeline.py
